{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 132,
  "lineage": "30a76ef2-0733-e3c5-7bcd-3cc2e4c0d681",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-secure-forward",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "24284"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-10T03:24:28.122-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tfg-crm/global/firewalls/gcp-network-firewall-secure-forward",
            "name": "gcp-network-firewall-secure-forward",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
            "priority": 1000,
            "project": "tfg-crm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/firewalls/gcp-network-firewall-secure-forward",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gcp-network-firewall-secure-forward"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-10T03:24:28.154-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tfg-crm/global/firewalls/gcp-network-firewall-http",
            "name": "gcp-network-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
            "priority": 1000,
            "project": "tfg-crm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/firewalls/gcp-network-firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gcp-network-firewall-http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-10T03:24:28.124-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tfg-crm/global/firewalls/gcp-network-firewall-https",
            "name": "gcp-network-firewall-https",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
            "priority": 1000,
            "project": "tfg-crm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/firewalls/gcp-network-firewall-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gcp-network-firewall-https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-05-10T03:24:28.153-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tfg-crm/global/firewalls/gcp-network-firewall-icmp",
            "name": "gcp-network-firewall-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
            "priority": 1000,
            "project": "tfg-crm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/firewalls/gcp-network-firewall-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gcp-network-firewall-icmp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mysql",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-10T03:24:28.134-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tfg-crm/global/firewalls/gcp-network-firewall-postgresql",
            "name": "gcp-network-firewall-postgresql",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
            "priority": 1000,
            "project": "tfg-crm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/firewalls/gcp-network-firewall-postgresql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gcp-network-firewall-mysql"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-10T03:24:28.144-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tfg-crm/global/firewalls/gcp-network-firewall-ssh",
            "name": "gcp-network-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
            "priority": 1000,
            "project": "tfg-crm",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/firewalls/gcp-network-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gcp-network-firewall-ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20200413",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tfg-crm/zones/europe-west1-b/disks/frontal"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tfg-crm/zones/europe-west1-b/instances/frontal",
            "instance_id": "688557940589357234",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "_t9xHDc4o9c=",
            "name": "frontal",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.229.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network",
                "network_ip": "10.132.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tfg-crm/regions/europe-west1/subnetworks/gcp-network",
                "subnetwork_project": "tfg-crm"
              }
            ],
            "project": "tfg-crm",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/zones/europe-west1-b/instances/frontal",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gcp-network-firewall-http",
              "gcp-network-firewall-https",
              "gcp-network-firewall-icmp",
              "gcp-network-firewall-mysql",
              "gcp-network-firewall-secure-forward",
              "gcp-network-firewall-ssh"
            ],
            "tags_fingerprint": "toZ4RoK0WlM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/tfg-crm/global/networks/gcp-network",
            "name": "gcp-network",
            "project": "tfg-crm",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-crm/global/networks/gcp-network"
          }
        }
      ]
    }
  ]
}